2000-06-05  Richard Braakman  <dark@wapit.com>

	* gwlib/conn.c: Implemented conn_open_tcp().
	Fixed conn_read_withlen, which I broke a few days ago.

	* gwlib/conn.c: Split the single Connection lock into two locks,
	one for reading and one for writing.  This allows reader and
	writer threads to work without fighting over one lock.  Only
	conn_wait needs both locks.

	* test/drive_wapbox.c: Take advantage of some new octstr functions.

2000-06-05  Richard Braakman  <dark@wapit.com>

	* gwlib/gwthread.h, gwlib/gwthread-pthread.c: Renamed
	gwthread_join_all to gwthread_join_every, and added a
	gwthread_join_all that joins ALL threads.  Added gwthread_wakeup_all
	to match.

	* gwlib/gwthread-pthread.c: Fix use of pipe(); reading and
	writing fd's were reversed.

2000-06-05  Richard Braakman  <dark@wapit.com>

	* gw/wsp.c: Installed Joerg Pommnitz's patch for correct parsing
	of WSP capabilities.

2000-06-05  Tuomas Luttinen  <tuo@wapit.com>

	* test/decompile.[ch]: A WML decompiler by Chris Wulff, Vanteon.
	
	* test/wml_tester.c: A patch by Chris Wulff, Vanteon added to produce 
	pure binary files. A little cleanup.

2000-06-05    <Kalle Marjola <rpr@wapit.com>>

	* gw/bb_smsc.c: changed sleep(1) to usleep. A bit more busier
	loop, that new interface is really needed

	* gw/numhash.c: removed some warnings

Mon Jun  5 10:32:41 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c: Fixed bug that was caused by not duplicating an
	octet string while copying it. Also fixed a memory leak.
	
	* gw/wtp_pdu.[ch]: Added function wtp_pdu_create. Also added
	wrappers around wtp_pdu.h to prevent problems when including
	many times, and added an include for gwlib/gwlib.h, so that
	the caller does not have to deal with that.
	
	* gw/wtp_send.c: Started conversion to using wtp_pdu.c instead
	of packing everything by hand. The basic PDUs are now converted.
	The negative ACK and some other ones are not, because I wasn't
	certain how they work, right now, and am too tired to understand